[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Sprites/NPC/GraphicsNPCTyping.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/NPC/GraphicsNPCFallingAsleep.png" type="Texture" id=2]
[ext_resource path="res://StateMachines/Worker/States/Worker_Working.gd" type="Script" id=3]
[ext_resource path="res://StateMachines/Worker/States/Worker_Sleeping.gd" type="Script" id=4]
[ext_resource path="res://StateMachines/Worker/Worker_State_Machine.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Worker.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sprites/UI/E-Key.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/UI/Coke_ThinkingBubble.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/UI/Coffee_ThinkingBubble.png" type="Texture" id=9]

[sub_resource type="Animation" id=2]
resource_name = "Sleeping"
length = 0.528
step = 0.033
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite_Sleeping:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.033, 0.066, 0.099, 0.132, 0.165, 0.198, 0.231, 0.264, 0.297, 0.33, 0.363, 0.396, 0.429, 0.462, 0.495 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Working"
length = 0.231
loop = true
step = 0.033
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite_Working:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.033, 0.066, 0.099, 0.132, 0.165, 0.198 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 30 )

[node name="Worker" type="Area2D"]
script = ExtResource( 6 )

[node name="Sprite_Working" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 7

[node name="Sprite_Sleeping" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
hframes = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Sleeping = SubResource( 2 )
anims/Working = SubResource( 1 )

[node name="WorkerStateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Working")

[node name="Working" type="Node" parent="WorkerStateMachine"]
script = ExtResource( 3 )

[node name="Sleeping" type="Node" parent="WorkerStateMachine"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5, 20 )
shape = SubResource( 3 )

[node name="Interact" type="Sprite" parent="."]
position = Vector2( -37, -36 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Sprite_Need_Cola" type="Sprite" parent="."]
visible = false
position = Vector2( 8, -33 )
texture = ExtResource( 8 )

[node name="Sprite_Need_Coffee" type="Sprite" parent="."]
visible = false
position = Vector2( 8, -33 )
texture = ExtResource( 9 )
